tests/NormalTests/paczka1/fuzzy1/56049265.err
Error in line 10: e0w3 S301 61,0
Error in line 14: e0w3 S940 67,2
Error in line 15: e0w3 S269 30,2
Error in line 22: 3M0o S2O9 148,2
Error in line 28: xUnd2Cw2E A646 4,1
Error in line 25: hBF5 S301 33,8
Error in line 35: 3M0o S301 79,7
Error in line 34: hBF5 S940 33,0
